--- a/scss/blocks/_feedback-form.scss
+++ b/scss/blocks/_feedback-form.scss
@@ -19,6 +19,11 @@
     border-radius: 4px;
     color: $text-color-white;
 
+    @media (max-width:680px) {
+        display: flex;
+        flex-direction: column;
+    }
+
     &_sm {
         max-width: 298px;
         min-height: 66px;
@@ -41,6 +46,20 @@
 
     &_lg {
         margin-bottom: 17px;
+    }
+}
+
+@media (min-width:481px) and (max-width:680px) {
+    .input-container_sm {
+        max-width: 100%;
+    }
+
+    .service_bg-red {
+        padding-bottom: 160px;
+    }
+
+    .content-container_right {
+        margin: 0;
     }
 }
 
@@ -69,23 +88,19 @@
     }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1440px) {}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {}
-
-@media screen and (min-width: 481px) and (max-width: 768px) {}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 680px) {
     .feedback-form {
         display: flex;
         flex-direction: column;
         max-width: 340px;
         margin: 0 auto;
     }
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
 
     .input-container {
-        display: flex;
-        flex-direction: column;
         gap: 11px;
 
         &_sm {
