--- a/scss/style.css
+++ b/scss/style.css
@@ -2683,6 +2683,8 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 .contacts {
   display: flex;
   justify-content: space-between;
+  max-width: 1920px;
+  gap: 20px;
   max-height: 387px;
   margin: 0 auto;
   font-family: "Rubik", sans-serif;
