fix photos block

--- a/scss/blocks/_photos.scss
+++ b/scss/blocks/_photos.scss
@@ -42,105 +42,174 @@
     text-align: center;
     line-height: 130%;
     color: $text-color-white;
-}
 
-@media screen and (min-width: 1025px) and (max-width: 1440px) {}
-
-@media screen and (min-width: 1025px) and (max-width: 1233px) {
-    .photos {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        justify-content: space-between;
-        align-items: flex-start;
-        max-width: 1000px;
-        min-height: 636px;
-        margin: 0 auto 80px;
-    
-        &__item {
-            min-width: 490px;
-            max-width: 490px;
-            min-height: 310px;
-    
-            &_l-top,
-            &_r-top,
-            &_l-bot,
-            &_r-bot {
-                background-size: contain;
-            }
-        }
-    }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .photos {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        justify-content: space-between;
-        align-items: flex-start;
-        max-width: 1000px;
-        min-height: 636px;
-        margin: 0 auto 80px;
-    
-        &__item {
-            min-width: 490px;
-            max-width: 490px;
-            min-height: 310px;
-    
-            &_l-top,
-            &_r-top,
-            &_l-bot,
-            &_r-bot {
-                background-size: contain;
-            }
-        }
-    }
-    
-    .photo-text {
+    @media screen and (max-width: 1440px) {
         font-size: 20px;
     }
-}
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
-    .photos {
-        max-width: 720px;
-        min-height: 471px;
-        margin: 0 auto 67px;
-
-        &__item {
-            max-width: 353px;
-            min-width: 353px;
-            min-height: 228px;
-
-            &_l-top,
-            &_r-top,
-            &_l-bot,
-            &_r-bot {
-                background-size: contain;
-            }
-        }
-    }
-
-    .photo-text {
+    @media screen and (max-width: 900px) {
         max-width: 300px;
         margin: 15px auto;
         font-size: 18px;
     }
+
+    @media screen and (max-width: 650px) {
+        max-width: 290px;
+        margin: 15px auto;
+        font-size: 16px;
+    }
+
+    @media screen and (max-width: 550px) {
+        max-width: 400px;
+        margin: 25px auto;
+        font-size: 20px;
+    }
+
+    @media screen and (max-width: 480px) {
+        max-width: 290px;
+        margin: 15px auto;
+        font-size: 16px;
+    }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 1440px) {
+    .photos {
+        max-width: 1000px;
+        min-height: 655px;
+        margin: 0 auto 80px;
+
+        &__item {
+            min-width: 490px;
+            max-width: 490px;
+            min-height: 318px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1233px) {
+    .photos {
+        max-width: 1000px;
+        min-height: 655px;
+        margin: 0 auto 80px;
+
+        &__item {
+            min-width: 490px;
+            max-width: 490px;
+            min-height: 318px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .photos {
+        max-width: 900px;
+        min-height: 590px;
+        margin: 0 auto 80px;
+
+        &__item {
+            min-width: 440px;
+            max-width: 440px;
+            min-height: 285px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .photos {
+        max-width: 800px;
+        min-height: 525px;
+        margin: 0 auto 60px;
+
+        &__item {
+            min-width: 390px;
+            max-width: 390px;
+            min-height: 252px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photos {
+        max-width: 720px;
+        min-height: 471px;
+        margin: 0 auto 50px;
+
+        &__item {
+            max-width: 350px;
+            min-width: 350px;
+            min-height: calc(350px*0.65);
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .photos {
+        max-width: 620px;
+        min-height: 410px;
+        margin: 0 auto 50px;
+
+        &__item {
+            max-width: 300px;
+            min-width: 300px;
+            min-height: calc(300px*0.65);
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 550px) {
     .photos {
         display: flex;
         flex-direction: column;
-        max-width: 340px;
+        max-width: 500px;
         gap: 14px;
         margin: 0 auto 51px;
 
         &__item {
-            max-width: 340px;
-            min-width: 340px;
-            min-height: 219px;
+            max-width: 500px;
+            min-width: 500px;
+            min-height: calc(500px*0.65);
 
             &_l-top,
             &_r-top,
@@ -150,15 +219,9 @@
             }
         }
     }
-
-    .photo-text {
-        max-width: 300px;
-        margin: 15px auto;
-        font-size: 18px;
-    }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 480px) {
     .photos {
         display: flex;
         flex-direction: column;
@@ -179,11 +242,5 @@
                 background-size: contain;
             }
         }
-    }
-
-    .photo-text {
-        max-width: 290px;
-        margin: 15px auto;
-        font-size: 16px;
     }
 }
