--- a/scss/blocks/_block-list.scss
+++ b/scss/blocks/_block-list.scss
@@ -11,34 +11,15 @@
     }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1440px) {}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {}
-
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .block-list {
         margin-bottom: 10px;
-    
+
         &__title {
             margin-bottom: 10px;
             font-size: 16px;
         }
-    
-        &__item {
-            font-size: 16px;
-        }
-    }
-}
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
-    .block-list {
-        margin-bottom: 10px;
-    
-        &__title {
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-    
         &__item {
             font-size: 16px;
         }
