--- a/scss/style.css
+++ b/scss/style.css
@@ -2696,7 +2696,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   margin-top: 10px;
 }
 
-@media screen and (min-width: 1234px) and (max-width: 1440px) {
+@media screen and (max-width: 1440px) {
   .contacts {
     max-width: 1440px;
   }
@@ -2710,7 +2710,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin-left: 100px;
   }
 }
-@media screen and (min-width: 1045px) and (max-width: 1233px) {
+@media screen and (max-width: 1233px) {
   .contacts {
     display: flex;
     flex-wrap: wrap;
@@ -2726,108 +2726,42 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin: 41px auto 0;
   }
   .contacts-inner {
-    display: flex;
     margin-top: 50px;
   }
   .contacts-inner_left, .contacts-inner_right {
-    display: inherit;
-    flex-direction: column;
-    align-items: flex-start;
-    max-height: 155px;
     margin-top: 0;
-    padding: 26px;
   }
   .contacts-inner_left {
-    min-width: 397px;
-    max-width: 397px;
     margin-left: 48px;
   }
   .contacts-inner_right {
     max-width: 244px;
     min-width: 244px;
-    margin-left: 14px;
   }
 }
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .contacts {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1024px;
-    max-height: -moz-fit-content;
-    max-height: fit-content;
-  }
-  .contacts_left {
-    min-width: 750px;
-  }
-  .contacts_right {
-    max-width: 1024px;
-    margin: 41px auto 0;
-  }
-  .contacts-inner {
-    display: flex;
-    margin-top: 50px;
-  }
+@media screen and (max-width: 1024px) {
   .contacts-inner_left, .contacts-inner_right {
-    display: inherit;
-    flex-direction: column;
-    align-items: flex-start;
-    max-height: 155px;
     margin-top: 0;
-    padding: 26px;
-  }
-  .contacts-inner_left {
-    min-width: 397px;
-    max-width: 397px;
-    margin-left: 48px;
-  }
-  .contacts-inner_right {
-    max-width: 244px;
-    min-width: 244px;
-    margin-left: 14px;
   }
 }
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .contacts {
-    display: flex;
-    flex-wrap: wrap;
     max-width: 750px;
     max-height: 315px;
-  }
-  .contacts_left {
-    min-width: 750px;
   }
   .contacts_right {
     max-width: 750px;
     max-height: 323px;
-    margin: 41px auto 0;
   }
   .contacts-inner {
-    display: flex;
     margin-top: 35px;
   }
   .contacts-inner_left, .contacts-inner_right {
-    display: inherit;
-    flex-direction: column;
-    align-items: flex-start;
-    max-height: 155px;
     margin-top: 0;
-    padding: 26px;
-  }
-  .contacts-inner_left {
-    min-width: 397px;
-    max-width: 397px;
-    margin-left: 48px;
-  }
-  .contacts-inner_right {
-    max-width: 244px;
-    min-width: 244px;
-    margin-left: 14px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .contacts {
-    display: flex;
-    flex-wrap: wrap;
     max-width: 390px;
     max-height: 1098px;
   }
@@ -2841,7 +2775,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin: 18px auto 0;
   }
   .contacts-inner {
-    display: flex;
     flex-direction: column;
     gap: 10px;
     max-width: 340px;
@@ -2851,7 +2784,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 1fr;
-    align-items: flex-start;
     min-width: 340px;
     margin: 0 auto;
     padding: 16px 20px 20px 8px;
@@ -2901,77 +2833,31 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 }
 @media screen and (max-width: 320px) {
   .contacts {
-    display: flex;
-    flex-wrap: wrap;
     max-width: 300px;
     max-height: 1098px;
   }
-  .contacts_left {
-    min-width: 300px;
-    margin: 0 auto;
-  }
   .contacts_right {
     max-width: 300px;
-    min-height: 233px;
-    margin: 18px auto 0;
   }
   .contacts-inner {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
     max-width: 300px;
-    margin-left: auto;
-    margin-right: auto;
   }
   .contacts-inner_left, .contacts-inner_right {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 1fr;
-    align-items: flex-start;
     min-width: 300px;
-    margin: 0 auto;
-    padding: 16px 20px 20px 8px;
   }
   .contacts-inner_left {
-    max-height: 100px;
-    gap: 0;
     margin-top: 0;
   }
-  .contacts-inner_right {
-    max-height: 80px;
-    gap: 0;
-  }
-  .contacts-inner_left .content-container__icon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
   .contacts-inner_left .content-container__item_bold {
-    margin-left: 20px;
     font-size: 16px;
   }
   .contacts-inner_left .content-container__item_tiny {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-bottom: 0;
-    margin-left: 20px;
     font-size: 12px;
   }
-  .contacts-inner_left .content-container__item {
-    margin-top: 5px;
-  }
-  .contacts-inner_right .content-container__icon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
   .contacts-inner_right .content-container__item_bold {
-    margin-left: 20px;
     font-size: 16px;
   }
   .contacts-inner_right .content-container__item_tiny {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-bottom: 0;
-    margin-left: 20px;
     font-size: 12px;
   }
   .contacts-inner_right .content-container__item {
