--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -67,7 +67,7 @@
     }
 }
 
-@media screen and (min-width: 1234px) and (max-width: 1440px) {
+@media screen and (max-width: 1440px) {
     .footer {
         max-width: 1440px;
         min-width: 1440px;
@@ -78,7 +78,7 @@
     }
 }
 
-@media screen and (min-width: 1045px) and (max-width: 1233px) {
+@media screen and (max-width: 1233px) {
     .footer {
         max-width: 1024px;
         min-width: 1024px;
@@ -97,7 +97,6 @@
         margin-left: 80px;
 
         &_top {
-            margin-top: 75px;
             margin-left: 0;
         }
 
@@ -109,38 +108,20 @@
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .footer {
-        max-width: 1024px;
-        min-width: 1024px;
-    }
-
-    .footer-logo {
-        margin-top: 81px;
-        margin-left: 50px;
-    }
-
-    .footer-menu {
-        margin-left: 140px;
-    }
-
+@media screen and (max-width: 1024px) {
     .footer-contacts {
-        margin-left: 80px;
 
         &_top {
-            margin-top: 75px;
             margin-left: 0;
         }
 
         &_bottom {
-            max-width: 280px;
-            margin-top: 20px;
             margin-left: 0;
         }
     }
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .footer {
         display: flex;
         flex-wrap: wrap;
@@ -151,7 +132,6 @@
     }
 
     .footer-logo {
-        display: flex;
         flex-direction: row;
         max-height: 50px;
         margin-top: 52px;
@@ -171,9 +151,6 @@
     }
 
     .footer-menu {
-        display: flex;
-        flex-direction: column;
-        max-width: 202px;
         margin-top: 0;
         margin-bottom: 43px;
         margin-left: 48px;
@@ -182,7 +159,7 @@
     .footer-contacts {
         display: flex;
         flex-direction: column;
-        margin-left: 48px;
+        margin-left: 26px;
 
         &_top {
             margin-top: 0;
@@ -212,36 +189,31 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
     .footer {
-        display: flex;
         flex-direction: column;
         max-width: 390px;
         min-width: 390px;
+        max-height: fit-content;
         margin: 0 auto;
     }
 
     .footer-logo {
+        flex-direction: column;
         max-height: 50px;
         margin-top: 35px;
-        margin-bottom: 48px;
         margin-left: 26px;
 
         &__image {
-            max-width: 208px;
-            min-height: 50px;
             margin-bottom: 11px;
         }
 
         &__text {
-            min-width: 250px;
+            margin-left: 0;
         }
     }
 
     .footer-menu {
-        display: flex;
-        flex-direction: column;
-        max-width: 202px;
         margin-top: 31px;
         margin-bottom: 24px;
         margin-left: 26px;
@@ -262,64 +234,15 @@
         &_bottom {
             margin-top: 22px;
             margin-left: 0;
-
-            & .content-container__item {
-
-                &_red {
-                    font-size: 18px;
-                }
-            }
         }
 
         & .content-container__item {
             max-width: 368px;
-
-            &_bold {
-                font-size: 30px;
-            }
         }
     }
 }
 
 @media screen and (max-width: 320px) {
-    .footer {
-        display: flex;
-        flex-direction: column;
-        max-width: 390px;
-        min-width: 390px;
-        margin: 0 auto;
-    }
-
-    .footer-logo {
-        max-height: 50px;
-        margin-top: 35px;
-        margin-bottom: 48px;
-        margin-left: 26px;
-
-        &__image {
-            max-width: 208px;
-            min-height: 50px;
-            margin-bottom: 11px;
-        }
-
-        &__text {
-            min-width: 250px;
-        }
-    }
-
-    .footer-menu {
-        display: flex;
-        flex-direction: column;
-        max-width: 202px;
-        margin-top: 31px;
-        margin-bottom: 24px;
-        margin-left: 26px;
-
-        &__link {
-            font-size: 16px;
-        }
-    }
-
     .footer-contacts {
         margin-left: 26px;
 
@@ -332,13 +255,6 @@
             margin-top: 15px;
             margin-bottom: 15px;
             margin-left: 0;
-
-            & .content-container__item {
-
-                &_red {
-                    font-size: 18px;
-                }
-            }
         }
 
         & .content-container__item {
